hw11-12/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: container-backend
          image: digitalocean/flask-helloworld
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 3
