hw11-12/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    name: backend
  ports:
  - targetPort: 5000
    port: 5000
