hw11-12/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    name: frontend
  ports:
  - targetPort: 80
    port: 80
